2011-03-07  Cosmin Truta  <ctruta@chromium.org>

Reviewed by Adam Barth.

        SVG <image> referenced by <use> is displayed incorrectly
        https://bugs.webkit.org/show_bug.cgi?id=55750

        * svg/custom/resources/rgb.svg: Added.
        * svg/custom/use-image-in-g-expected.checksum: Added.
        * svg/custom/use-image-in-g-expected.png: Added.
        * svg/custom/use-image-in-g-expected.txt: Added.
        * svg/custom/use-image-in-g.svg: Added.
2011-03-07  Cosmin Truta  <ctruta@chromium.org>

        Reviewed by Adam Barth.

        SVG <image> referenced by <use> is displayed incorrectly
        https://bugs.webkit.org/show_bug.cgi?id=55750

        The result of sourceURI must use the URL of the enclosing document as base.
        Otherwise, the base may sometimes be empty, and, as a consequence,
        the intermediate KURL object may be invalid.

        Test: svg/custom/use-image-in-g.svg

        * svg/SVGImageLoader.cpp:
        (WebCore::SVGImageLoader::sourceURI):

Canonical link: https://commits.webkit.org/70410@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@80516 268f45cc-cd09-0410-ab3c-d52691b4dbfc